src/objects/TPA_Request__c.object
<CustomObject>
    <fields>
        <fullName>AMA_Agreement_required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <inlineHelpText>Check if AMA agreement is required</inlineHelpText>
        <label>AMA Agreement required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_Bridge_File__c</fullName>
        <label>AMA Bridge File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_ClientProvideIDs__c</fullName>
        <label>Client only provide physician IDs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_DBL__c</fullName>
        <label>Database Licensee (DBL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Acxiom Company (ACS)</fullName>
                </value>
                <value>
                    <fullName>Medco Health (MH)</fullName>
                </value>
                <value>
                    <fullName>Advantage Management Solution, Inc. (AMS)</fullName>
                </value>
                <value>
                    <fullName>MediMedia LLC (MML)</fullName>
                </value>
                <value>
                    <fullName>DMD Marketing Corp (DMD)</fullName>
                </value>
                <value>
                    <fullName>Redi-Mail Direct Marketing, Inc. and Redi-Data (REDI)</fullName>
                </value>
                <value>
                    <fullName>IMS Health Incorporated (IMS)</fullName>
                </value>
                <value>
                    <fullName>Source Healthcare Analytics (SHA)</fullName>
                </value>
                <value>
                    <fullName>J. Knipper &amp; Co., Inc. (JKC)</fullName>
                </value>
                <value>
                    <fullName>SDI Health, LLC (SDI)</fullName>
                </value>
                <value>
                    <fullName>Medical Marketing Service, Inc. (MMS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Dist_ana_Mail_Atrr_For_Template__c</fullName>
        <label>AMA Dist ana Mail Atrr For Template</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Distribution_And_Mailing_Attributes__c</fullName>
        <label>What will the mailing contain?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Personalized Letters</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Clinical Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_FeesAgreedToByUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true once the user creating the TPA request has certified that they agree to any AMA fees incurred as a result of processing this request</description>
        <label>AMA Fees Agreed To By User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_HowResponseDataCollected__c</fullName>
        <label>How Response Data Collected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
                <value>
                    <fullName>Website Replies</fullName>
                </value>
                <value>
                    <fullName>Business Reply Mail</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Howlong_SP_has_Data_Access__c</fullName>
        <label>How long SP has Data Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Greater than 90 days</fullName>
                </value>
                <value>
                    <fullName>90 days or less</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Market_Research_Attributes_For_Templ__c</fullName>
        <label>AMA Market Research Attributes For Templ</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_Market_Research_Attributes__c</fullName>
        <label>Description of market research project</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_NumOfPhysicianRecords__c</fullName>
        <label>Number of Physician Recs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMA_NumberOfPhysicianRecords__c</fullName>
        <label>Number of Physician Recs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_NumberofProjects__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Number of Projects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_OtherPPDVariablesCollected__c</fullName>
        <label>Other AMA-PPD Variables Collected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_OtherServicesProvided__c</fullName>
        <label>Other Services Provided</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_PPDVariablesCollected__c</fullName>
        <label>AMA-PPD Variables Collected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Address Type</fullName>
                </value>
                <value>
                    <fullName>Birth Year</fullName>
                </value>
                <value>
                    <fullName>Census Data Codes</fullName>
                </value>
                <value>
                    <fullName>Gender Code</fullName>
                </value>
                <value>
                    <fullName>Geographic Codes</fullName>
                </value>
                <value>
                    <fullName>Graduate Medical Training</fullName>
                </value>
                <value>
                    <fullName>Graduation Data</fullName>
                </value>
                <value>
                    <fullName>Historical Licensure Data</fullName>
                </value>
                <value>
                    <fullName>Hospital Affiliation</fullName>
                </value>
                <value>
                    <fullName>M.D. DO. Indicator</fullName>
                </value>
                <value>
                    <fullName>Major Professional Activity</fullName>
                </value>
                <value>
                    <fullName>Medical Education Number</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>No Contact Indicator</fullName>
                </value>
                <value>
                    <fullName>Physician Recognition Award Recipients</fullName>
                </value>
                <value>
                    <fullName>Preferred Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Present Employment</fullName>
                </value>
                <value>
                    <fullName>Presumed Dead Flag</fullName>
                </value>
                <value>
                    <fullName>Primary Office Address</fullName>
                </value>
                <value>
                    <fullName>Specialty – Primary Secondary</fullName>
                </value>
                <value>
                    <fullName>Telephone Number</fullName>
                </value>
                <value>
                    <fullName>Type of Practice</fullName>
                </value>
                <value>
                    <fullName>Undeliverable Address Flag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_RepDataCollectedOtherWay__c</fullName>
        <label>RepData Collected Other Ways</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMA_RespDataAction__c</fullName>
        <label>RespData Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Returned to IMS</fullName>
                </value>
                <value>
                    <fullName>Returned to Client</fullName>
                </value>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_RespDataDestroyedReturnIn90Days__c</fullName>
        <label>RespData Destroyed/Returned in 90 Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_SPConductingMailing__c</fullName>
        <label>Is the SP conducting mailing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_SPMailingDetails__c</fullName>
        <label>What will the mailing contains?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_ServicesProvidedBySP__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Type of direct to Prescriber Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Personalized Letters</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Distribution And Mailing</fullName>
                </value>
                <value>
                    <fullName>Labeling</fullName>
                </value>
                <value>
                    <fullName>Inserting</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>E-mail broadcasting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_Services_Provided__c</fullName>
        <label>AMA Services Provided</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMA_TypeOfPrescriberLevelData__c</fullName>
        <label>Type of Prescriber Level Data</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Address Type</fullName>
                </value>
                <value>
                    <fullName>Birth Year</fullName>
                </value>
                <value>
                    <fullName>Census Data Codes</fullName>
                </value>
                <value>
                    <fullName>CMS UPIN</fullName>
                </value>
                <value>
                    <fullName>Fax Number</fullName>
                </value>
                <value>
                    <fullName>Former Name</fullName>
                </value>
                <value>
                    <fullName>Gender Code</fullName>
                </value>
                <value>
                    <fullName>Geographic Codes</fullName>
                </value>
                <value>
                    <fullName>Graduate Medical Training</fullName>
                </value>
                <value>
                    <fullName>Graduation Data</fullName>
                </value>
                <value>
                    <fullName>Historical Licensure Data</fullName>
                </value>
                <value>
                    <fullName>Hospital Affiliation</fullName>
                </value>
                <value>
                    <fullName>IQVIA Prescriber ID</fullName>
                </value>
                <value>
                    <fullName>License State Abbreviation</fullName>
                </value>
                <value>
                    <fullName>M.D., D.O. Indicator</fullName>
                </value>
                <value>
                    <fullName>Major Professional Activity</fullName>
                </value>
                <value>
                    <fullName>Medical Education Number (ME#)</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>No Contact Indicator</fullName>
                </value>
                <value>
                    <fullName>No Web Flag</fullName>
                </value>
                <value>
                    <fullName>NPI Number</fullName>
                </value>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>PDRP Flag</fullName>
                </value>
                <value>
                    <fullName>Physician Recognition Award Recipients</fullName>
                </value>
                <value>
                    <fullName>Preferred Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Present Employment</fullName>
                </value>
                <value>
                    <fullName>Presumed Dead Flag</fullName>
                </value>
                <value>
                    <fullName>Primary Office Address</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Specialty – Primary Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_USPrescriberData__c</fullName>
        <label>Includeded U.S. prescriber level data?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATC_Category__c</fullName>
        <label>ATC Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A ALIMENTARY TRACT, METABOL</fullName>
                </value>
                <value>
                    <fullName>B BLOOD + B.FORMING ORGANS</fullName>
                </value>
                <value>
                    <fullName>C CARDIOVASCULAR SYSTEM</fullName>
                </value>
                <value>
                    <fullName>D DERMATOLOGICALS</fullName>
                </value>
                <value>
                    <fullName>G G.U.SYSTEM &amp; SEX HORMONS</fullName>
                </value>
                <value>
                    <fullName>H SYSTEMIC HORMONES</fullName>
                </value>
                <value>
                    <fullName>J SYSTEMIC ANTI-INFECTIVES</fullName>
                </value>
                <value>
                    <fullName>K HOSPITAL SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>L ANTINEOPLASTIC AND IMMUNOMODULATING AGENTS</fullName>
                </value>
                <value>
                    <fullName>M MUSCULO-SKELETAL SYSTEM</fullName>
                </value>
                <value>
                    <fullName>N NERVOUS SYSTEM</fullName>
                </value>
                <value>
                    <fullName>P PARASITOLOGY</fullName>
                </value>
                <value>
                    <fullName>R RESPIRATORY SYSTEM</fullName>
                </value>
                <value>
                    <fullName>S SENSORY ORGANS</fullName>
                </value>
                <value>
                    <fullName>T DIAGNOSTIC AGENTS</fullName>
                </value>
                <value>
                    <fullName>V VARIOUS</fullName>
                </value>
                <value>
                    <fullName>Z NOT AVAILABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATC_Data__c</fullName>
        <description>Dependent to ATC Category</description>
        <label>ATC Data</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ATC_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A1 STOMATOLOGICALS</fullName>
                </value>
                <value>
                    <fullName>A10 DRUGS USED IN DIABETES</fullName>
                </value>
                <value>
                    <fullName>A11 VITAMINS</fullName>
                </value>
                <value>
                    <fullName>A12 MINERAL SUPPLEMENTS</fullName>
                </value>
                <value>
                    <fullName>A13 TONICS</fullName>
                </value>
                <value>
                    <fullName>A14 ANABOLICS SYSTEMIC</fullName>
                </value>
                <value>
                    <fullName>A15 APPETITE STIMULANTS</fullName>
                </value>
                <value>
                    <fullName>A16 OTHER METABOLIC PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>A2 A-ACID A-FLAT A-ULCERANT</fullName>
                </value>
                <value>
                    <fullName>A3 GAST-INTEST DISORD DRUG</fullName>
                </value>
                <value>
                    <fullName>A4 ANTIEMETCS+ANTINAUSEANTS</fullName>
                </value>
                <value>
                    <fullName>A5 CHOLAGOGUES+HEPATIC PROC</fullName>
                </value>
                <value>
                    <fullName>A6 LAXATIVES</fullName>
                </value>
                <value>
                    <fullName>A7 A-DIAR ORAL ELEC+A-INFLA</fullName>
                </value>
                <value>
                    <fullName>A8 A-OBESITY PREPS EXC DIET</fullName>
                </value>
                <value>
                    <fullName>A9 DIGESTIVES INC.ENZYMES</fullName>
                </value>
                <value>
                    <fullName>B1 ANTITHROMBOTIC AGENTS</fullName>
                </value>
                <value>
                    <fullName>B2 BLOOD COAGULATION SYSTEM, OTHER PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>B3 ANTIANAEMICS</fullName>
                </value>
                <value>
                    <fullName>B6 ALL OTH HAEMATOLOG AGENT</fullName>
                </value>
                <value>
                    <fullName>C1 CARDIAC THERAPY</fullName>
                </value>
                <value>
                    <fullName>C10 LIP.REG./ANTI-ATH. PREPS</fullName>
                </value>
                <value>
                    <fullName>C11 C.V. MULTITH. COMB PROD</fullName>
                </value>
                <value>
                    <fullName>C2 ANTIHYPERTENSIVES</fullName>
                </value>
                <value>
                    <fullName>C3 DIURETICS</fullName>
                </value>
                <value>
                    <fullName>C4 CEREBR/PERIPH VASOTHERAP</fullName>
                </value>
                <value>
                    <fullName>C5 A-VARICOSE/HAEMORRHOIDAL</fullName>
                </value>
                <value>
                    <fullName>C6 OTH CARDIOVASCULAR PRDS</fullName>
                </value>
                <value>
                    <fullName>C7 BETA BLOCKING AGENTS</fullName>
                </value>
                <value>
                    <fullName>C8 CALCIUM ANTAGONISTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ack_Understanding_of_Prescriber_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ack Understanding of Prescriber Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=View&quot;,&quot;View&quot;,&quot;_self&quot;) 

&amp; 

IF(ISPICKVAL(Request_Status__c,&quot;Client Draft&quot;) , 
&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=edit&quot;,&quot;Edit&quot;,&quot;_self&quot;) 
&amp;	&quot; | &quot;&amp;HYPERLINK(&quot;/imshealthPortal/VFP_TPA_CustomLandingPage?linkaction=closedDraft&amp;url=/imshealthPortal/VFP_TPA_ListView&amp;closedId=&quot;&amp;Id,&quot;Close Draft&quot;,&quot;_self&quot;) , 
NULL ) 

&amp; 

IF(	ISPICKVAL(Request_Status__c,&quot;In Effect&quot;) 
&amp;&amp;	Data_Access_End_Date__c&gt;=TODAY() 
&amp;&amp;	Data_Access_End_Date__c&lt;(TODAY()+61) 
&amp;&amp; !Is_Renewed__c 
&amp;&amp; $Profile.Name&lt;&gt;&quot;TPA Processor Profile CCP&quot; 
,	
&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=renew&quot;, &quot;Renew&quot;,&quot;_self&quot;) 

, 
NULL 
) 

&amp; 

IF(	ISPICKVAL(Request_Status__c,&quot;Expired&quot;) 
&amp;&amp;	$Profile.Name&lt;&gt;&quot;TPA Processor Profile CCP&quot; 
&amp;&amp; !Is_Renewed__c 
 &amp;&amp;  (  TODAY()  -  DATEVALUE(CreatedDate ) &lt; 1095 ) 
, 
&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=renew&quot;, &quot;Renew&quot;,&quot;_self&quot;) , 
NULL) 

&amp;
IF(Is_Renewed__c &amp;&amp;  ISPICKVAL( Renewed_Type__c , &quot;Renewed&quot;), &quot; | Renewed as &quot; + Renewed_As__r.Name , IF(Is_Renewed__c &amp;&amp;  ISPICKVAL( Renewed_Type__c , &quot;Modified Renewal&quot;),
 &quot; | Modified Renewal as &quot; + Renewed_As__r.Name, IF(Is_Renewed__c ,
 &quot; | Renewed as &quot; + Renewed_As__r.Name, NULL) )) 
&amp; 

IF( $Profile.Name&lt;&gt;&quot;TPA Processor Profile CCP&quot; &amp;&amp;
(ISPICKVAL(Request_Status__c,&quot;Awaiting Vendor Submission&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;In Auto Approval Process&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;TPA Approved Awaiting AMA Approval&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;In Review By IQVIA&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Pending Vendor Response on Data Destruction from Prior TPAs&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Awaiting Vendor Signature&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Initializing Vendor&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Signature Under Validation&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Pending Vendor AMA Fee Acknowledgement&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Pending - Vendor Declined AMA Fees&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Awaiting Client Modification&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Awaiting Account Mgmt Communication&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Awaiting Final Review&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Pending Cancellation&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Awaiting Client Acknowledgement&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Hold for TPA non-compliance&quot;)
|| ISPICKVAL(Request_Status__c,&quot;Pending IQVIA Review of Voided Envelope&quot;))
, 

IF(	
!ISPICKVAL(Request_Status__c,&quot;Signature Under Validation&quot;) , 

&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=edit&quot;,&quot;Edit&quot;,&quot;_self&quot;) , 
NULL ) 
&amp;	IF( 
$Profile.Name&lt;&gt;&quot;TPA Processor Profile CCP&quot; 
, 
&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=clone&quot;,&quot;Clone&quot;,&quot;_self&quot;) 

&amp;	&quot; | &quot;&amp;HYPERLINK(&quot;/imshealthPortal/VFP_TPA_CustomLandingPage?linkaction=cancelTPA&amp;url=/imshealthPortal/VFP_TPA_ListView&amp;cancelId=&quot;&amp;Id,&quot;Cancel&quot;,&quot;_self&quot;) 
, NULL 
) 
, IF( 
ISPICKVAL(Request_Status__c,&quot;In Effect&quot;) 
|| ISPICKVAL(Request_Status__c,&quot;Expired&quot;) 
||	ISPICKVAL(Request_Status__c,&quot;Cancelled&quot;) 
, 
IF( 
$Profile.Name&lt;&gt;&quot;TPA Processor Profile CCP&quot;, 
&quot; | &quot;&amp;HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=clone&quot;,&quot;Clone&quot;,&quot;_self&quot;), 
NULL 
), NULL )) 

&amp;
IF(ISPICKVAL(Request_Status__c,&quot;Expired&quot;)
&amp;&amp; NOT(ISBLANK(Client_Set_Earlier_Expiry_Date__c)),
 &quot; | Client Expired Early&quot; ,
NULL)

&amp;
IF(ISPICKVAL(Request_Status__c,&quot;In Effect&quot;),
IF(NOT(ISBLANK(Client_Set_Earlier_Expiry_Date__c)),
&quot; | Client Set Earlier Expiry Date&quot;,
IF($Profile.Name = &quot;US TP Processor Profile CCP&quot;
|| $Profile.Name = &quot;TPA Customer Community Plus Login User&quot;
|| $Profile.Name = &quot;Super User Profile CCP&quot;, &quot; | &quot; &amp;
HYPERLINK(URL__c&amp;Id&amp;&quot;&amp;name=earlyexpire&quot;,&quot;Early Expire&quot;,&quot;_target&quot;), &apos;&apos;
 )),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_Categories__c</fullName>
        <label>Ad-hoc Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Asset Specific Ad-Hoc Term</fullName>
                </value>
                <value>
                    <fullName>General Ad-Hoc Term</fullName>
                </value>
                <value>
                    <fullName>Use/Offering Specific Ad-Hoc Terms</fullName>
                </value>
                <value>
                    <fullName>Use Specific Ad-Hoc Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Data_Protection_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Data Protection Terms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Envelope_completion_Date__c</fullName>
        <label>Additional Envelope completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Tier_2_Vendor_Report__c</fullName>
        <formula>IF(Additional_Tier_2_Vendor__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Tier_2 Vendor Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Tier_2_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Tier_2 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TPA Requests (Additional Vendor Contact)</relationshipLabel>
        <relationshipName>TPA_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Invited_Report__c</fullName>
        <formula>IF(Additional_Vendor_Invited__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Vendor Invited Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Invited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Vendor Invited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TPA Requests (Additional Vendor)</relationshipLabel>
        <relationshipName>TPA_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_at_Payment_Risk_Report__c</fullName>
        <formula>IF(Additional_Vendor_at_Payment_Risk__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Vendor at Payment Risk Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_at_Payment_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Vendor at Payment Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>After_in_Effect_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TP Tech-AMA Lic Released After In Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Effective_Date__c</fullName>
        <label>Agreement Effective  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Effective_Date_f__c</fullName>
        <formula>IF( ISPICKVAL( Request_Status__c , &apos;In Effect&apos;) || ISPICKVAL( Request_Status__c , &apos;Expired&apos;),Agreement_Effective_Date__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>Created under ER-3196</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Apttus generated agreement number.</description>
        <label>Agreement Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Purpose_List__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Agreement Purpose List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>Created under ER-3196</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Helpful_Emails_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-696: Check whether all helpful emails sent or not.</description>
        <label>All Helpful Emails Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Therapy_Areas__c</fullName>
        <label>All Therapy Areas?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Please Select a Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>